3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/skill_util.c: Corrected the flags passed to change_exp when failing
    to properly write a spell scroll, which resulted in loss of experience in
    the wrong skill.
    Fix for the bug mentioned in #1530000
Yann Chachkoff 2006-12-26

lib/{Makefile.in,adm/map_info,collect.pl.in,Makefile.am}: ignore .svn rather
    than CVS.
Andreas Kirschbaum 2006-12-24

common/loader.l: Fix some problems related to curse spell monster
  handling.  Specifically, coordinates of custom monsters was not
  being saved (always set to 0,0), which caused crashes for multipart
  monsters upon load.  Also, speed was being set to 0, resulting in
  customized monsters not having any speed.
MSW 2006-12-21

Fix a crash due to non-checking of parameters.
 socket/item.c
Ryo 2006-12-13

Tentative fix for bug #1551398: Curse spell breaks customized monsters.
The server will now create a "temporary" archetype when loading a customized monster.
This archetype will have the same name, but not be part of regular archetype list.
It'll be removed when last object using it is removed.
A new field "reference_count" is added to archetype structure, to store how many
objects reference that temporary archetype (think of item duplication with customized archetype).
This fix has been roughly tested, but could certainly use more tests.
Modified files:
 common/loader.l: handle customized monsters
 common/object.c: increment reference_count if copying a temporary archetype. Decrement it when freeing an
  object, and free archetype if needed
 common/treasure.c: add "artifact_init" to signal start/end of artifact loading, required for temporary archetypes handling.